Code quality fixes as suggested by FindBugs.